syntax = "proto3";

package fairing.users.v1beta1;

service Users {
  // Create a site in a team.
  rpc CreateUser(CreateUserRequest) returns (User);
}

message User {
  string name = 1;
}

message CreateUserRequest {
  string resource_id = 1;

  string password = 2;
}
